--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <ul>Debug Ruby Labs
     <ul>Massage Joe's Back</ul>
     <ul>Archive Steph's Gif collection<ul>
-    <ul>Take out trash</ul>
+    <ul>Take trash</ul>
   </li>
 
   <h2 Issue Bot Camera Capture Archive</h2>
